--- a/deliverables/_independent/python-storyboardclient.yaml
+++ b/deliverables/_independent/python-storyboardclient.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - hash: 911834599aadf28fb21bf2bb7bc1d190d8ec3e18
         repo: openstack-infra/python-storyboardclient
+  - projects:
+      - hash: f68b16ab5cf1e463b1f0c5f873147b2504bb862d
+        repo: openstack-infra/python-storyboardclient
+    version: 0.2.0
