--- a/deliverables/_independent/xstatic-angular-material.yaml
+++ b/deliverables/_independent/xstatic-angular-material.yaml
@@ -15,5 +15,10 @@ releases:
       - repo: openstack/xstatic-angular-material
         hash: 32f969a32abf2ee50821ac00cbe4339ea6cce3d5
         tarball-base: XStatic-Angular-Material
+  - version: 1.1.5.2
+    projects:
+      - repo: openstack/xstatic-angular-material
+        hash: a866083297f00755ec5f84f539d8f6ec19b2b134
+        tarball-base: XStatic-Angular-Material
 repository-settings:
   openstack/xstatic-angular-material: {}
