Add Oslo feature freeze to release schedule
Per [1], Oslo observes feature freeze earlier than most projects in
order to give consuming projects a chance to implement any new
features in Oslo before their feature freeze.  This should be
reflected in the release schedule.

Change-Id: Ib822c34c1ade20dcdaa5c9667f91e0639e0f56df
1: http://specs.openstack.org/openstack/oslo-specs/specs/policy/feature-freeze.html

--- a/doc/source/rocky/schedule.yaml
+++ b/doc/source/rocky/schedule.yaml
@@ -91,6 +91,7 @@ cycle:
     project-specific:
       - r-manila-fp-freeze
       - r-keystone-ffreeze
+      - r-oslo-feature-freeze
   - end: '2018-07-20'
     name: R-6
     start: '2018-07-16'
