--- a/deliverables/rocky/taskflow.yaml
+++ b/deliverables/rocky/taskflow.yaml
@@ -6,3 +6,8 @@ team: oslo
 type: library
 repository-settings:
   openstack/taskflow: {}
+releases:
+  - projects:
+      - hash: 22990d49b4bd6f020f67a6a39b8aa17a2819badb
+        repo: openstack/taskflow
+    version: 3.2.0
