--- a/deliverables/rocky/python-tripleoclient.yaml
+++ b/deliverables/rocky/python-tripleoclient.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: 9680a19dc9752037d69917e3be6863b68d78db4c
         repo: openstack/python-tripleoclient
     version: 10.2.0
+  - projects:
+      - hash: 00d308fd93527d923a734ef2422605693364317f
+        repo: openstack/python-tripleoclient
+    version: 10.3.0
