--- a/deliverables/rocky/oslo.policy.yaml
+++ b/deliverables/rocky/oslo.policy.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 7a50c85a384a3fa4711c25153f7ce55982f35e22
         repo: openstack/oslo.policy
     version: 1.37.0
+  - projects:
+      - hash: f319967738e671e1400052e39116ff3c23b9f9a0
+        repo: openstack/oslo.policy
+    version: 1.38.0
