--- a/deliverables/rocky/os-collect-config.yaml
+++ b/deliverables/rocky/os-collect-config.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 7de2fd8444fc4e42b86ecf91849f658cdf5d196e
         repo: openstack/os-collect-config
     version: 9.0.0
+  - projects:
+      - hash: 5bebbf1654f8eea8d74a4e403ac6bd3331a7fedf
+        repo: openstack/os-collect-config
+    version: 9.1.0
