--- a/deliverables/rocky/openstacksdk.yaml
+++ b/deliverables/rocky/openstacksdk.yaml
@@ -22,5 +22,9 @@ releases:
       - hash: cf47f3f7c01e3e878cdbc4c38ba7bd27c65df230
         repo: openstack/openstacksdk
     version: 0.15.0
+  - projects:
+      - hash: 2fa2720eeb648bc5eab38eb938ab637dc21e6612
+        repo: openstack/openstacksdk
+    version: 0.16.0
 repository-settings:
   openstack/openstacksdk: {}
