--- a/deliverables/rocky/osc-lib.yaml
+++ b/deliverables/rocky/osc-lib.yaml
@@ -1,5 +1,5 @@
 ---
-include-pypi-link: yes
+include-pypi-link: true
 launchpad: python-openstackclient
 release-model: cycle-with-intermediary
 team: OpenStackClient
@@ -11,3 +11,7 @@ releases:
       - hash: b764efc46fcee48394761620672a3a1e117aa3db
         repo: openstack/osc-lib
     version: 1.10.0
+  - projects:
+      - hash: 8d28a59c43414e8671e660781d534c8b3f942b38
+        repo: openstack/osc-lib
+    version: 1.11.0
