--- a/deliverables/rocky/os-brick.yaml
+++ b/deliverables/rocky/os-brick.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: 66362ae0f27769ecf272e421385c894de5166d7c
         repo: openstack/os-brick
     version: 2.5.1
+  - projects:
+      - hash: 9b729ef0e7461f5ca2d80b7f991aeacf547a1819
+        repo: openstack/os-brick
+    version: 2.5.2
