Add Stein PTL election details to the schedule
Change-Id: Ib557725987f21c8fc1f0440a8cced29f9da9bc7a
Depends-On: https://review.openstack.org/582109

--- a/doc/source/rocky/schedule.yaml
+++ b/doc/source/rocky/schedule.yaml
@@ -109,9 +109,14 @@ cycle:
       - r-soft-sf
       - r-rf
       - r-goals-complete
+    project-specific:
+      - s-ptl-email-deadline
+      - s-ptl-nomination
   - end: '2018-08-03'
     name: R-4
     start: '2018-07-30'
+    project-specific:
+      - s-ptl-election
   - end: '2018-08-10'
     name: R-3
     start: '2018-08-06'
