--- a/deliverables/rocky/python-monascaclient.yaml
+++ b/deliverables/rocky/python-monascaclient.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 1aadb994950b26f31960d7ce1d32ab884da8fc94
         repo: openstack/python-monascaclient
     version: 1.11.0
+  - projects:
+      - hash: be83eae483cd864d882fc2ef209c8b1d1724a42b
+        repo: openstack/python-monascaclient
+    version: 1.12.0
