--- a/deliverables/rocky/neutron-lib.yaml
+++ b/deliverables/rocky/neutron-lib.yaml
@@ -21,5 +21,9 @@ releases:
     projects:
       - repo: openstack/neutron-lib
         hash: abc287647b49d7651c2f122de0e51c2d94d78bfa
+  - version: 1.18.0
+    projects:
+      - repo: openstack/neutron-lib
+        hash: 67865c701b6386b82cfed2ea74fe9462a23b7dc7
 repository-settings:
   openstack/neutron-lib: {}
