--- a/deliverables/rocky/glance-store.yaml
+++ b/deliverables/rocky/glance-store.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/glance_store
         hash: cc97b949033f892d6675692cbc8a24df3ce0e15e
+  - version: 0.25.0
+    projects:
+      - repo: openstack/glance_store
+        hash: baa663ec5c497aeab6f2cfa82946c2d70607d9dd
 repository-settings:
   openstack/glance_store: {}
