--- a/deliverables/rocky/os-vif.yaml
+++ b/deliverables/rocky/os-vif.yaml
@@ -10,5 +10,10 @@ releases:
       - repo: openstack/os-vif
         hash: 761b3c42790a2c1a084f05075aafa35826e2f416
         tarball-base: os_vif
+  - version: 1.11.0
+    projects:
+      - repo: openstack/os-vif
+        hash: 96b5a11d35d74faf7c9866dceef66984dbcddae6
+        tarball-base: os_vif
 repository-settings:
   openstack/os-vif: {}
