--- a/deliverables/rocky/os-brick.yaml
+++ b/deliverables/rocky/os-brick.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 9b729ef0e7461f5ca2d80b7f991aeacf547a1819
         repo: openstack/os-brick
     version: 2.5.2
+  - projects:
+      - hash: 641337bec28adddae742a86faf592e360afdd1d8
+        repo: openstack/os-brick
+    version: 2.5.3
