--- a/deliverables/ocata/kolla.yaml
+++ b/deliverables/ocata/kolla.yaml
@@ -49,5 +49,10 @@ releases:
     projects:
       - repo: openstack/kolla
         hash: 32fc5cb2f0303f18a73aa0b52fd805d5778a1397
+  - version: 4.0.5
+    projects:
+      - repo: openstack/kolla
+        hash: 683ee4511a5071e74073c84477f04057a1d0a5d8
+
 repository-settings:
   openstack/kolla: {}
