--- a/deliverables/ocata/kolla-ansible.yaml
+++ b/deliverables/ocata/kolla-ansible.yaml
@@ -49,5 +49,9 @@ releases:
     projects:
       - repo: openstack/kolla-ansible
         hash: 2bc2890d243d031dc6120e80a90c8f4bc013d181
+  - version: 4.0.5
+    projects:
+      - repo: openstack/kolla-ansible
+        hash: 5bc45ebd8154107dab0db04b382ba6ece4ff843d
 repository-settings:
   openstack/kolla-ansible: {}
