create stable/rocky branch for neutron-lib
This patch adds the 'branches' section to the neutron-lib rocky
deliverable using neutron-lib version 1.18.0 for the branch.

Change-Id: Ifa8346f8571dfbdcf1f4b1e2deb10b6dd2a9fa73

--- a/deliverables/rocky/neutron-lib.yaml
+++ b/deliverables/rocky/neutron-lib.yaml
@@ -1,4 +1,7 @@
 ---
+branches:
+  - location: 1.18.0
+    name: stable/rocky
 include-pypi-link: yes
 launchpad: neutron
 release-model: cycle-with-intermediary
