--- a/deliverables/rocky/glance-store.yaml
+++ b/deliverables/rocky/glance-store.yaml
@@ -13,5 +13,12 @@ releases:
     projects:
       - repo: openstack/glance_store
         hash: baa663ec5c497aeab6f2cfa82946c2d70607d9dd
+  - version: 0.26.0
+    projects:
+      - repo: openstack/glance_store
+        hash: 7141c77f18b654f42329d5639aee9c8a694f7d97
+branches:
+  - name: stable/rocky
+    location: 0.26.0
 repository-settings:
   openstack/glance_store: {}
