Tag final newton releases for tripleo deliverables
Mark all (newton) TripleO deliverables as newton-eol

Change-Id: I8eb17425f3ce69228ab21b4f208aef2f23a789c6

--- a/deliverables/newton/instack.yaml
+++ b/deliverables/newton/instack.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 6e2a5dee92c49fc338620098347015eaa32c16cd
         repo: openstack/instack
     version: 5.1.0
+  - projects:
+      - hash: 6e2a5dee92c49fc338620098347015eaa32c16cd
+        repo: openstack/instack
+    version: newton-eol
 team: tripleo
 type: library
 repository-settings:
