--- a/deliverables/newton/os-apply-config.yaml
+++ b/deliverables/newton/os-apply-config.yaml
@@ -27,6 +27,10 @@ releases:
       - hash: 5e41fbf013e13777af4be18da3201c24a7b523f5
         repo: openstack/os-apply-config
     version: 5.1.1
+  - projects:
+      - hash: 59c226b754c5112ab2b803bcac44aa5c69750299
+        repo: openstack/os-apply-config
+    version: newton-eol
 team: tripleo
 type: other
 repository-settings:
