--- a/deliverables/newton/os-collect-config.yaml
+++ b/deliverables/newton/os-collect-config.yaml
@@ -35,6 +35,10 @@ releases:
       - hash: bbd95e655f31f313c12684e4f2d2cbae447a0cf7
         repo: openstack/os-collect-config
     version: 5.2.1
+  - projects:
+      - hash: d5a2dc714c0ab5e516fd6a53ba84e88c3e083fc7
+        repo: openstack/os-collect-config
+    version: newton-eol
 team: tripleo
 type: other
 repository-settings:
