--- a/deliverables/newton/python-tripleoclient.yaml
+++ b/deliverables/newton/python-tripleoclient.yaml
@@ -58,6 +58,10 @@ releases:
       - hash: 9e035eb11b5a44b4852fcd8485748d424b7df640
         repo: openstack/python-tripleoclient
     version: 5.4.6
+  - projects:
+      - hash: 9e035eb11b5a44b4852fcd8485748d424b7df640
+        repo: openstack/python-tripleoclient
+    version: newton-eol
 team: tripleo
 type: library
 repository-settings:
