--- a/deliverables/newton/tripleo-image-elements.yaml
+++ b/deliverables/newton/tripleo-image-elements.yaml
@@ -55,6 +55,10 @@ releases:
       - hash: 7981c31fc0e9e60901780997160083b80f5d8a34
         repo: openstack/tripleo-image-elements
     version: 5.3.3
+  - projects:
+      - hash: 209ca23f70445831932f4b3ceb07a022ca4c5338
+        repo: openstack/tripleo-image-elements
+    version: newton-eol
 team: tripleo
 type: other
 repository-settings:
