--- a/deliverables/newton/tripleo-puppet-elements.yaml
+++ b/deliverables/newton/tripleo-puppet-elements.yaml
@@ -59,6 +59,10 @@ releases:
       - hash: 178a693761b13b4a7a1d81600ddadfcf1640865c
         repo: openstack/tripleo-puppet-elements
     version: 5.3.3
+  - projects:
+      - hash: 4ca75e44498aa6e8c67d924667701399d4aa8041
+        repo: openstack/tripleo-puppet-elements
+    version: newton-eol
 team: tripleo
 type: other
 repository-settings:
