--- a/deliverables/newton/tripleo-validations.yaml
+++ b/deliverables/newton/tripleo-validations.yaml
@@ -30,6 +30,10 @@ releases:
       - hash: 952d63318e97112a2bf7a4ca663f9b55778aba19
         repo: openstack/tripleo-validations
     version: 5.1.4
+  - projects:
+      - hash: b7631b7818359f83ce7eaae09885904e744704da
+        repo: openstack/tripleo-validations
+    version: newton-eol
 team: tripleo
 type: library
 repository-settings:
