--- a/deliverables/newton/os-refresh-config.yaml
+++ b/deliverables/newton/os-refresh-config.yaml
@@ -31,6 +31,10 @@ releases:
       - hash: 8b3d3f8e12f73ddaa80f16c56c6fac948a940a14
         repo: openstack/os-refresh-config
     version: 5.2.0
+  - projects:
+      - hash: 8b3d3f8e12f73ddaa80f16c56c6fac948a940a14
+        repo: openstack/os-refresh-config
+    version: newton-eol
 team: tripleo
 type: other
 repository-settings:
