--- a/deliverables/newton/tripleo-ui.yaml
+++ b/deliverables/newton/tripleo-ui.yaml
@@ -42,6 +42,10 @@ releases:
       - hash: 468faeef9755a9c76f384bd91703e33eaed8a3d6
         repo: openstack/tripleo-ui
     version: 1.2.1
+  - projects:
+      - hash: 468faeef9755a9c76f384bd91703e33eaed8a3d6
+        repo: openstack/tripleo-ui
+    version: newton-eol
 team: tripleo
 type: other
 repository-settings:
