--- a/deliverables/rocky/keystonemiddleware.yaml
+++ b/deliverables/rocky/keystonemiddleware.yaml
@@ -11,6 +11,10 @@ releases:
       - hash: 83d0612e03471f56be3be2b521cc21974118cebe
         repo: openstack/keystonemiddleware
     version: 5.1.0
+  - projects:
+      - hash: c46f29278d6a916416948d4120489b429f8bf460
+        repo: openstack/keystonemiddleware
+    version: 5.2.0
 team: keystone
 type: library
 repository-settings:
