--- a/deliverables/rocky/keystoneauth.yaml
+++ b/deliverables/rocky/keystoneauth.yaml
@@ -38,6 +38,11 @@ releases:
         repo: openstack/keystoneauth
         tarball-base: keystoneauth1
     version: 3.9.0
+  - projects:
+      - hash: 323f4e4bc4710d42e493eb56e40ba139a84d67b3
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.10.0
 team: keystone
 type: library
 repository-settings:
