--- a/deliverables/rocky/mistral-lib.yaml
+++ b/deliverables/rocky/mistral-lib.yaml
@@ -1,4 +1,7 @@
 ---
+branches:
+  - location: 1.0.0
+    name: stable/rocky
 include-pypi-link: yes
 launchpad: mistral
 release-model: cycle-with-intermediary
@@ -11,3 +14,7 @@ releases:
       - hash: ef3482eace42f6914c0c37941d4626784c3715ec
         repo: openstack/mistral-lib
     version: 0.5.0
+  - projects:
+      - hash: d1ccfd05555d6b3dc51fe567544691d741c6630c
+        repo: openstack/mistral-lib
+    version: 1.0.0
