--- a/deliverables/rocky/monasca-common.yaml
+++ b/deliverables/rocky/monasca-common.yaml
@@ -14,3 +14,10 @@ releases:
       - hash: f1f1ba90fd3e9bd2ea39c06a01673e1a2c8f281a
         repo: openstack/monasca-common
     version: 2.10.0
+  - projects:
+      - hash: b2f734a7e9d7677a7851d77d932cf05d1dfafaa9
+        repo: openstack/monasca-common
+    version: 2.11.0
+branches:
+  - location: 2.11.0
+    name: stable/rocky
