rocky: release os-traits 0.9.0
This release adds a helper method 'normalize_name' for consumers to use
if they generate names of traits dynamically, to ensure the names
conform to the restrictions on trait names in placement.

Change-Id: If1a86da99987143969ef6f96393bdfc6b0e21102

--- a/deliverables/rocky/os-traits.yaml
+++ b/deliverables/rocky/os-traits.yaml
@@ -20,3 +20,7 @@ releases:
       - hash: 88960e17fbaea0301882dc1251a6cdab3bfc1bcb
         repo: openstack/os-traits
     version: 0.8.0
+  - projects:
+      - hash: 91ab5ff372ccefccb2f3260eb3bcd5bad51d6daf
+        repo: openstack/os-traits
+    version: 0.9.0
