--- a/deliverables/rocky/openstacksdk.yaml
+++ b/deliverables/rocky/openstacksdk.yaml
@@ -26,5 +26,9 @@ releases:
       - hash: 2fa2720eeb648bc5eab38eb938ab637dc21e6612
         repo: openstack/openstacksdk
     version: 0.16.0
+  - projects:
+      - hash: 4600f1ec7b3ca9ca3a9a5cbcfdcce9578087d115
+        repo: openstack/openstacksdk
+    version: 0.17.0
 repository-settings:
   openstack/openstacksdk: {}
