--- a/deliverables/rocky/shade.yaml
+++ b/deliverables/rocky/shade.yaml
@@ -9,5 +9,9 @@ releases:
       - hash: 2a59fb58f2fed98f9e31e805d42ddc5368f43c71
         repo: openstack-infra/shade
     version: 1.28.0
+  - projects:
+      - hash: df4c5819d2b1da148ef5a6e9a6fa09e684e707dc
+        repo: openstack-infra/shade
+    version: 1.29.0
 repository-settings:
   openstack-infra/shade: {}
