Oslo releases for 2018-7-19
These should be the final Oslo feature releases, so all of the
projects with pending requirements updates are included.

Change-Id: Ia69502d9f15e98b99c56957d88537adf44567a47

--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -96,5 +96,9 @@ releases:
       - hash: 73234c84b58d317c0a944a5fb5a47e59ad267e3d
         repo: openstack-dev/pbr
     version: 4.1.0
+  - projects:
+      - hash: 915e62ef7b1af4f3449457af1dbb77b0d11635f3
+        repo: openstack-dev/pbr
+    version: 4.1.1
 repository-settings:
   openstack-dev/pbr: {}
