--- a/deliverables/_independent/sphinx-feature-classification.yaml
+++ b/deliverables/_independent/sphinx-feature-classification.yaml
@@ -12,5 +12,9 @@ releases:
     projects:
       - repo: openstack/sphinx-feature-classification
         hash: 34e2fddbddaf01907cd6edc56c9bf6bb293bb7aa
+  - projects:
+      - hash: c07a2e9cf61e749a4e002df1bf1867b86bd9a427
+        repo: openstack/sphinx-feature-classification
+    version: 0.3.0
 repository-settings:
   openstack/sphinx-feature-classification: {}
