--- a/deliverables/rocky/oslo.config.yaml
+++ b/deliverables/rocky/oslo.config.yaml
@@ -39,3 +39,7 @@ releases:
       - hash: df0a57438f5e7927d3f323295365c6b4e6950e71
         repo: openstack/oslo.config
     version: 6.3.0
+  - projects:
+      - hash: ce150b10378aaf4f8b140a20a627b89c384c8867
+        repo: openstack/oslo.config
+    version: 6.4.0
