--- a/deliverables/rocky/oslo.i18n.yaml
+++ b/deliverables/rocky/oslo.i18n.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 172e20b10981069c36b0f42377e5b4fbe22a9864
         repo: openstack/oslo.i18n
     version: 3.20.0
+  - projects:
+      - hash: e690af4a3c2d6efd7afcde6d87196895030d7576
+        repo: openstack/oslo.i18n
+    version: 3.21.0
