--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -47,3 +47,7 @@ releases:
       - hash: 1f0682bc59be89bc9c6f1d471de81051319b6f8c
         repo: openstack/oslo.messaging
     version: 8.0.0
+  - projects:
+      - hash: 7dc76843114b21d280c27bab9d7776d7f37e3569
+        repo: openstack/oslo.messaging
+    version: 8.1.0
