--- a/deliverables/rocky/oslo.middleware.yaml
+++ b/deliverables/rocky/oslo.middleware.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 381dcca54a65d27fa6400f3797a29f555d08976f
         repo: openstack/oslo.middleware
     version: 3.35.0
+  - projects:
+      - hash: 48ec101f159f2345bdadb688fe2d35b08a038686
+        repo: openstack/oslo.middleware
+    version: 3.36.0
