--- a/deliverables/rocky/oslo.policy.yaml
+++ b/deliverables/rocky/oslo.policy.yaml
@@ -27,3 +27,7 @@ releases:
       - hash: f319967738e671e1400052e39116ff3c23b9f9a0
         repo: openstack/oslo.policy
     version: 1.38.0
+  - projects:
+      - hash: 0fc941f2802b787956c07e5aaf20f6272e689cf7
+        repo: openstack/oslo.policy
+    version: 1.38.1
