--- a/deliverables/rocky/oslo.utils.yaml
+++ b/deliverables/rocky/oslo.utils.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 8b0a17ed6e8b9eea8a749208b8e63301aa842ab9
         repo: openstack/oslo.utils
     version: 3.36.3
+  - projects:
+      - hash: 7f8397091f63488f314f4dea49d83d6947f9fc27
+        repo: openstack/oslo.utils
+    version: 3.36.4
