--- a/deliverables/rocky/mox3.yaml
+++ b/deliverables/rocky/mox3.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: c979e7b77ab7858ff4e49ac5a1ff5c6f32ae291c
         repo: openstack/mox3
     version: 0.25.0
+  - projects:
+      - hash: b0577a9a3698bfc306e5b022211d60b91d40d2b9
+        repo: openstack/mox3
+    version: 0.26.0
