--- a/deliverables/rocky/oslo.vmware.yaml
+++ b/deliverables/rocky/oslo.vmware.yaml
@@ -31,3 +31,7 @@ releases:
       - hash: 9ef646629441b5992ca346a9f419446b5a4b9177
         repo: openstack/oslo.vmware
     version: 2.30.0
+  - projects:
+      - hash: 01e404f5c24d883f88a7e061214004351d7f41fd
+        repo: openstack/oslo.vmware
+    version: 2.31.0
