--- a/deliverables/rocky/stevedore.yaml
+++ b/deliverables/rocky/stevedore.yaml
@@ -6,3 +6,8 @@ team: oslo
 type: library
 repository-settings:
   openstack/stevedore: {}
+releases:
+  - projects:
+      - hash: 64f70f245a1439138757910810873a0e3134ab53
+        repo: openstack/stevedore
+    version: 1.29.0
