--- a/deliverables/rocky/python-heatclient.yaml
+++ b/deliverables/rocky/python-heatclient.yaml
@@ -13,5 +13,9 @@ releases:
     projects:
       - repo: openstack/python-heatclient
         hash: f095a0fd133a831ffeb04f9cb7f9d81a4f31a04a
+  - version: 1.16.1
+    projects:
+      - repo: openstack/python-heatclient
+        hash: b5f3d34cd009445de9a6489828faad7ec624a1a6
 repository-settings:
   openstack/python-heatclient: {}
