--- a/deliverables/pike/kolla.yaml
+++ b/deliverables/pike/kolla.yaml
@@ -36,6 +36,10 @@ releases:
     projects:
       - repo: openstack/kolla
         hash: 04f7b6126c13f5211b2939f88599316b18ce5f55
+  - version: 5.0.3
+    projects:
+      - repo: openstack/kolla
+        hash: cde8b659045426ff708a1288436df0e176053939
 release-notes: https://docs.openstack.org/releasenotes/kolla/pike.html
 repository-settings:
   openstack/kolla: {}
