--- a/deliverables/pike/kolla-ansible.yaml
+++ b/deliverables/pike/kolla-ansible.yaml
@@ -36,6 +36,10 @@ releases:
     projects:
       - repo: openstack/kolla-ansible
         hash: 7a5cfbba2b01792a4e762a98d46e201bc7041798
+  - version: 5.0.3
+    projects:
+      - repo: openstack/kolla-ansible
+        hash: 41b46ee15ed031cf3f27cc59a4c38a9259869ec0
 release-notes: https://docs.openstack.org/releasenotes/kolla-ansible/pike.html
 repository-settings:
   openstack/kolla-ansible: {}
