--- a/deliverables/queens/panko.yaml
+++ b/deliverables/queens/panko.yaml
@@ -13,6 +13,10 @@ releases:
     projects:
       - repo: openstack/panko
         hash: 7d27099363cafc102f092a3511c3c7f37e3e664f
+  - version: 4.0.2
+    projects:
+      - repo: openstack/panko
+        hash: 576f32a72d65c5b1cccc344e188f21544e4136d3
 repository-settings:
   openstack/panko: {}
 branches:
