Create stable/rocky library branches
Create stable branches for libraries that did not include
branching in their final rocky release.

Change-Id: I7cd497c0f97e0097064bd0b10ca55e751c5818ee
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/rocky/automaton.yaml
+++ b/deliverables/rocky/automaton.yaml
@@ -11,3 +11,6 @@ releases:
       - hash: ce03d76925c2cc87d85eabad0437a40b74b9d206
         repo: openstack/automaton
     version: 1.15.0
+branches:
+  - location: 1.15.0
+    name: stable/rocky
