--- a/deliverables/rocky/castellan.yaml
+++ b/deliverables/rocky/castellan.yaml
@@ -10,3 +10,6 @@ releases:
       - hash: 6336a59b9b5f373efa653e6fcce8ea1c964fdbae
         repo: openstack/castellan
     version: 0.18.0
+branches:
+  - location: 0.18.0
+    name: stable/rocky
