--- a/deliverables/rocky/cliff.yaml
+++ b/deliverables/rocky/cliff.yaml
@@ -19,3 +19,6 @@ releases:
       - hash: dd6abfffba239ff1be945dbd2b53a402d2757b46
         repo: openstack/cliff
     version: 2.13.0
+branches:
+  - location: 2.13.0
+    name: stable/rocky
