--- a/deliverables/rocky/debtcollector.yaml
+++ b/deliverables/rocky/debtcollector.yaml
@@ -11,3 +11,6 @@ releases:
       - hash: d3165af5b939b98e8f7c42a9613d556fa3f58a2c
         repo: openstack/debtcollector
     version: 1.20.0
+branches:
+  - location: 1.20.0
+    name: stable/rocky
