--- a/deliverables/rocky/futurist.yaml
+++ b/deliverables/rocky/futurist.yaml
@@ -11,3 +11,6 @@ releases:
       - hash: 936a5d5f13a0c01bb45629aadbf4cd83013932e2
         repo: openstack/futurist
     version: 1.7.0
+branches:
+  - location: 1.7.0
+    name: stable/rocky
