--- a/deliverables/rocky/heat-translator.yaml
+++ b/deliverables/rocky/heat-translator.yaml
@@ -11,3 +11,6 @@ releases:
         hash: 74f6c5bbef26f0aafc78aff499ff428ba6a3d5be
 repository-settings:
   openstack/heat-translator: {}
+branches:
+  - location: 1.1.0
+    name: stable/rocky
