--- a/deliverables/rocky/instack.yaml
+++ b/deliverables/rocky/instack.yaml
@@ -15,3 +15,6 @@ releases:
       - hash: 1dca54c838b759eab1ae7c49871e2bba85dae06c
         repo: openstack/instack
     version: 9.1.0
+branches:
+  - location: 9.1.0
+    name: stable/rocky
