--- a/deliverables/rocky/keystonemiddleware.yaml
+++ b/deliverables/rocky/keystonemiddleware.yaml
@@ -19,3 +19,6 @@ team: keystone
 type: library
 repository-settings:
   openstack/keystonemiddleware: {}
+branches:
+  - location: 5.2.0
+    name: stable/rocky
