--- a/deliverables/rocky/openstacksdk.yaml
+++ b/deliverables/rocky/openstacksdk.yaml
@@ -32,3 +32,6 @@ releases:
     version: 0.17.0
 repository-settings:
   openstack/openstacksdk: {}
+branches:
+  - location: 0.17.0
+    name: stable/rocky
