--- a/deliverables/rocky/os-brick.yaml
+++ b/deliverables/rocky/os-brick.yaml
@@ -27,3 +27,6 @@ releases:
       - hash: 641337bec28adddae742a86faf592e360afdd1d8
         repo: openstack/os-brick
     version: 2.5.3
+branches:
+  - location: 2.5.3
+    name: stable/rocky
