--- a/deliverables/rocky/os-vif.yaml
+++ b/deliverables/rocky/os-vif.yaml
@@ -17,3 +17,6 @@ releases:
         tarball-base: os_vif
 repository-settings:
   openstack/os-vif: {}
+branches:
+  - location: 1.11.0
+    name: stable/rocky
