--- a/deliverables/rocky/os-win.yaml
+++ b/deliverables/rocky/os-win.yaml
@@ -11,3 +11,6 @@ releases:
         hash: 6a5325be766368a1523c4f66b371c06fbdd789ec
 repository-settings:
   openstack/os-win: {}
+branches:
+  - location: 4.0.0
+    name: stable/rocky
