--- a/deliverables/rocky/osc-placement.yaml
+++ b/deliverables/rocky/osc-placement.yaml
@@ -15,3 +15,6 @@ releases:
       - hash: 06b5738a3acf1f4fad850c88abf3415457dc73ee
         repo: openstack/osc-placement
     version: 1.2.0
+branches:
+  - location: 1.2.0
+    name: stable/rocky
