--- a/deliverables/rocky/oslo.concurrency.yaml
+++ b/deliverables/rocky/oslo.concurrency.yaml
@@ -15,3 +15,6 @@ releases:
       - hash: 2429c4c4f04102dcad3388bfaa8cdf5dc12bcf0f
         repo: openstack/oslo.concurrency
     version: 3.27.0
+branches:
+  - location: 3.27.0
+    name: stable/rocky
