--- a/deliverables/rocky/oslo.config.yaml
+++ b/deliverables/rocky/oslo.config.yaml
@@ -43,3 +43,6 @@ releases:
       - hash: ce150b10378aaf4f8b140a20a627b89c384c8867
         repo: openstack/oslo.config
     version: 6.4.0
+branches:
+  - location: 6.4.0
+    name: stable/rocky
