--- a/deliverables/rocky/oslo.db.yaml
+++ b/deliverables/rocky/oslo.db.yaml
@@ -35,3 +35,6 @@ releases:
       - hash: dff11337f55b7a9a28d7c30658df51b7b0b443eb
         repo: openstack/oslo.db
     version: 4.40.0
+branches:
+  - location: 4.40.0
+    name: stable/rocky
