--- a/deliverables/rocky/oslo.log.yaml
+++ b/deliverables/rocky/oslo.log.yaml
@@ -23,3 +23,6 @@ releases:
       - hash: 3b43002a3172d990cf48304dd743c97162ece1f3
         repo: openstack/oslo.log
     version: 3.39.0
+branches:
+  - location: 3.39.0
+    name: stable/rocky
