--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -51,3 +51,6 @@ releases:
       - hash: 7dc76843114b21d280c27bab9d7776d7f37e3569
         repo: openstack/oslo.messaging
     version: 8.1.0
+branches:
+  - location: 8.1.0
+    name: stable/rocky
