--- a/deliverables/rocky/oslo.middleware.yaml
+++ b/deliverables/rocky/oslo.middleware.yaml
@@ -15,3 +15,6 @@ releases:
       - hash: 48ec101f159f2345bdadb688fe2d35b08a038686
         repo: openstack/oslo.middleware
     version: 3.36.0
+branches:
+  - location: 3.36.0
+    name: stable/rocky
