--- a/deliverables/rocky/oslo.policy.yaml
+++ b/deliverables/rocky/oslo.policy.yaml
@@ -31,3 +31,6 @@ releases:
       - hash: 0fc941f2802b787956c07e5aaf20f6272e689cf7
         repo: openstack/oslo.policy
     version: 1.38.1
+branches:
+  - location: 1.38.1
+    name: stable/rocky
