--- a/deliverables/rocky/oslo.privsep.yaml
+++ b/deliverables/rocky/oslo.privsep.yaml
@@ -15,3 +15,6 @@ releases:
       - hash: d510207740f59345db9a46c3b64bc078148e869a
         repo: openstack/oslo.privsep
     version: 1.29.0
+branches:
+  - location: 1.29.0
+    name: stable/rocky
