--- a/deliverables/rocky/oslo.reports.yaml
+++ b/deliverables/rocky/oslo.reports.yaml
@@ -15,3 +15,6 @@ releases:
       - hash: d743d0183a0166ae8bef56b6721f0ba48c73aeab
         repo: openstack/oslo.reports
     version: 1.28.0
+branches:
+  - location: 1.28.0
+    name: stable/rocky
