--- a/deliverables/rocky/oslo.rootwrap.yaml
+++ b/deliverables/rocky/oslo.rootwrap.yaml
@@ -15,3 +15,6 @@ releases:
       - hash: 9b632e29f145a4e56e12f0ef8f860b57c3231257
         repo: openstack/oslo.rootwrap
     version: 5.14.1
+branches:
+  - location: 5.14.1
+    name: stable/rocky
