--- a/deliverables/rocky/oslo.serialization.yaml
+++ b/deliverables/rocky/oslo.serialization.yaml
@@ -19,3 +19,6 @@ releases:
       - hash: fb15d638b1389ccc05d18c20ff478d483643c9d9
         repo: openstack/oslo.serialization
     version: 2.27.0
+branches:
+  - location: 2.27.0
+    name: stable/rocky
