--- a/deliverables/rocky/oslo.service.yaml
+++ b/deliverables/rocky/oslo.service.yaml
@@ -27,3 +27,6 @@ releases:
       - hash: 62d4119dac47ab31e924a62ee2184e32e8d9fb02
         repo: openstack/oslo.service
     version: 1.31.3
+branches:
+  - location: 1.31.3
+    name: stable/rocky
