--- a/deliverables/rocky/oslo.versionedobjects.yaml
+++ b/deliverables/rocky/oslo.versionedobjects.yaml
@@ -27,3 +27,6 @@ releases:
       - hash: d46aea7e3c0411956f0b7afdcf08a7ae4500cdd9
         repo: openstack/oslo.versionedobjects
     version: 1.33.3
+branches:
+  - location: 1.33.3
+    name: stable/rocky
