--- a/deliverables/rocky/oslo.vmware.yaml
+++ b/deliverables/rocky/oslo.vmware.yaml
@@ -35,3 +35,6 @@ releases:
       - hash: 01e404f5c24d883f88a7e061214004351d7f41fd
         repo: openstack/oslo.vmware
     version: 2.31.0
+branches:
+  - location: 2.31.0
+    name: stable/rocky
