--- a/deliverables/rocky/oslotest.yaml
+++ b/deliverables/rocky/oslotest.yaml
@@ -31,3 +31,6 @@ releases:
       - hash: 897823fbd61ae9ba015af38e9fed5a5728de64c2
         repo: openstack/oslotest
     version: 3.6.0
+branches:
+  - location: 3.6.0
+    name: stable/rocky
