--- a/deliverables/rocky/osprofiler.yaml
+++ b/deliverables/rocky/osprofiler.yaml
@@ -23,3 +23,6 @@ releases:
       - hash: 6d68170f72ef303e6564e164aafb1ec53a8b8314
         repo: openstack/osprofiler
     version: 2.3.0
+branches:
+  - location: 2.3.0
+    name: stable/rocky
