--- a/deliverables/rocky/ovsdbapp.yaml
+++ b/deliverables/rocky/ovsdbapp.yaml
@@ -14,3 +14,6 @@ releases:
         hash: f15d014fc7cb4111c132e7e2b3b3f35e0dbf5e82
 repository-settings:
   openstack/ovsdbapp: {}
+branches:
+  - location: 0.11.0
+    name: stable/rocky
