--- a/deliverables/rocky/sahara-extra.yaml
+++ b/deliverables/rocky/sahara-extra.yaml
@@ -14,3 +14,6 @@ releases:
         hash: c118e53a8e85ca93f3aa5e8f268c934f325c679a
 repository-settings:
   openstack/sahara-extra: {}
+branches:
+  - location: 9.1.0
+    name: stable/rocky
