--- a/deliverables/rocky/shade.yaml
+++ b/deliverables/rocky/shade.yaml
@@ -15,3 +15,6 @@ releases:
     version: 1.29.0
 repository-settings:
   openstack-infra/shade: {}
+branches:
+  - location: 1.29.0
+    name: stable/rocky
