--- a/deliverables/rocky/taskflow.yaml
+++ b/deliverables/rocky/taskflow.yaml
@@ -11,3 +11,6 @@ releases:
       - hash: 22990d49b4bd6f020f67a6a39b8aa17a2819badb
         repo: openstack/taskflow
     version: 3.2.0
+branches:
+  - location: 3.2.0
+    name: stable/rocky
