--- a/deliverables/rocky/tooz.yaml
+++ b/deliverables/rocky/tooz.yaml
@@ -15,3 +15,6 @@ releases:
       - hash: 2ac3ef36d2687f820cb44f6b27dd81ebf1c4165b
         repo: openstack/tooz
     version: 1.62.0
+branches:
+  - location: 1.62.0
+    name: stable/rocky
