--- a/deliverables/rocky/tosca-parser.yaml
+++ b/deliverables/rocky/tosca-parser.yaml
@@ -15,3 +15,6 @@ releases:
     version: 1.1.0
 repository-settings:
   openstack/tosca-parser: {}
+branches:
+  - location: 1.0.0
+    name: stable/rocky
