--- a/deliverables/rocky/mox3.yaml
+++ b/deliverables/rocky/mox3.yaml
@@ -15,3 +15,6 @@ releases:
       - hash: b0577a9a3698bfc306e5b022211d60b91d40d2b9
         repo: openstack/mox3
     version: 0.26.0
+branches:
+  - location: 0.26.0
+    name: stable/rocky
