--- a/deliverables/rocky/os-client-config.yaml
+++ b/deliverables/rocky/os-client-config.yaml
@@ -23,3 +23,6 @@ releases:
       - hash: a024da3618c4a2a69eca0d83f6e4b34fa25643ca
         repo: openstack/os-client-config
     version: 1.31.2
+branches:
+  - location: 1.31.2
+    name: stable/rocky
