--- a/deliverables/rocky/os-traits.yaml
+++ b/deliverables/rocky/os-traits.yaml
@@ -24,3 +24,6 @@ releases:
       - hash: 91ab5ff372ccefccb2f3260eb3bcd5bad51d6daf
         repo: openstack/os-traits
     version: 0.9.0
+branches:
+  - location: 0.9.0
+    name: stable/rocky
