--- a/deliverables/rocky/oslo.cache.yaml
+++ b/deliverables/rocky/oslo.cache.yaml
@@ -19,3 +19,6 @@ releases:
       - hash: eedaff4cac47ad4a39fdccfeb71b8c63ff2e2463
         repo: openstack/oslo.cache
     version: 1.30.1
+branches:
+  - location: 1.30.1
+    name: stable/rocky
