--- a/deliverables/rocky/oslo.context.yaml
+++ b/deliverables/rocky/oslo.context.yaml
@@ -11,3 +11,6 @@ releases:
       - hash: b1ba490ac5520f34f560b1be9290f020f6c8e2e7
         repo: openstack/oslo.context
     version: 2.21.0
+branches:
+  - location: 2.21.0
+    name: stable/rocky
