--- a/deliverables/rocky/oslo.i18n.yaml
+++ b/deliverables/rocky/oslo.i18n.yaml
@@ -15,3 +15,6 @@ releases:
       - hash: e690af4a3c2d6efd7afcde6d87196895030d7576
         repo: openstack/oslo.i18n
     version: 3.21.0
+branches:
+  - location: 3.21.0
+    name: stable/rocky
