--- a/deliverables/rocky/oslo.utils.yaml
+++ b/deliverables/rocky/oslo.utils.yaml
@@ -27,3 +27,6 @@ releases:
       - hash: 7f8397091f63488f314f4dea49d83d6947f9fc27
         repo: openstack/oslo.utils
     version: 3.36.4
+branches:
+  - location: 3.36.4
+    name: stable/rocky
