--- a/deliverables/rocky/pycadf.yaml
+++ b/deliverables/rocky/pycadf.yaml
@@ -11,3 +11,6 @@ releases:
       - hash: 7df2d5978005c1a4af33067e77ecd945b38ab13a
         repo: openstack/pycadf
     version: 2.8.0
+branches:
+  - location: 2.8.0
+    name: stable/rocky
