--- a/deliverables/rocky/stevedore.yaml
+++ b/deliverables/rocky/stevedore.yaml
@@ -11,3 +11,6 @@ releases:
       - hash: 64f70f245a1439138757910810873a0e3134ab53
         repo: openstack/stevedore
     version: 1.29.0
+branches:
+  - location: 1.29.0
+    name: stable/rocky
