--- a/deliverables/rocky/tosca-parser.yaml
+++ b/deliverables/rocky/tosca-parser.yaml
@@ -9,5 +9,9 @@ releases:
       - hash: e17c2a8060434a27293cd4719647cf735216f3c0
         repo: openstack/tosca-parser
     version: 1.0.0
+  - projects:
+      - hash: 3eb67e755d886dd6701e9c1fd3ade294b72c5201
+        repo: openstack/tosca-parser
+    version: 1.1.0
 repository-settings:
   openstack/tosca-parser: {}
