sahara-extra is not a library
Sahara-extra contains Sahara components and tools not included
into the main Sahara repository, like the Swift filesystem
implementation for Hadoop, or the main function wrappers that
adapt for oozie and spark, as well as tools to help build those.

Change-Id: Ied40f1e901631ea8f00914a532ca7220c9593965

--- a/deliverables/rocky/sahara-extra.yaml
+++ b/deliverables/rocky/sahara-extra.yaml
@@ -2,7 +2,7 @@
 launchpad: sahara
 release-model: cycle-with-intermediary
 team: sahara
-type: library
+type: other
 releases:
   - version: 9.0.0
     projects:
