Force ceilometermiddleware 1.3.0 release
There were a couple CI related commits since last cycle
that we should tag before branching so they do not need
to be backported.

Change-Id: I439ab6c986a260c7326d5cd8eb05078649a6e830

--- a/deliverables/rocky/ceilometermiddleware.yaml
+++ b/deliverables/rocky/ceilometermiddleware.yaml
@@ -6,3 +6,13 @@ team: Telemetry
 type: library
 repository-settings:
   openstack/ceilometermiddleware: {}
+releases:
+  - projects:
+      - hash: 8332b9eaff3a59026e7af1a7339525440a960d51
+        repo: openstack/ceilometermiddleware
+    version: 1.3.0
+    flags:
+      - forced
+branches:
+  - location: 1.3.0
+    name: stable/rocky
