--- a/deliverables/rocky/ovsdbapp.yaml
+++ b/deliverables/rocky/ovsdbapp.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: 90dfca5dfc60e48544ff25f63c3fa59cb88fc521
+  - version: 0.12.0
+    projects:
+      - repo: openstack/ovsdbapp
+        hash: f15d014fc7cb4111c132e7e2b3b3f35e0dbf5e82
 repository-settings:
   openstack/ovsdbapp: {}
