--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -4,24 +4,41 @@
     timeout: 3600
     vars:
       tox_envlist: list-changes
+    irrelevant-files:
+      - ^doc/.*$
 
 - project:
     check:
       jobs:
         - openstack-tox-validate:
             timeout: 3600
+            irrelevant-files:
+              - ^doc/.*$
         - releases-tox-list-changes
         - build-openstack-sphinx-docs:
             vars:
               sphinx_python: python3
-
+        - openstack-tox-py35:
+            irrelevant-files:
+              - ^deliverables/.*$
+              - ^doc/.*$
+        - openstack-tox-pep8:
+            irrelevant-files:
+              - ^deliverables/.*$
+              - ^doc/.*$
     gate:
       jobs:
         - openstack-tox-validate:
             timeout: 3600
+            irrelevant-files:
+              - ^doc/.*$
         - build-openstack-sphinx-docs:
             vars:
               sphinx_python: python3
+        - openstack-tox-py35:
+            irrelevant-files:
+              - ^deliverables/.*$
+              - ^doc/.*$
     release-post:
       jobs:
         - tag-releases
