--- a/deliverables/rocky/zaqar.yaml
+++ b/deliverables/rocky/zaqar.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/zaqar
         hash: 85529379befd2947627881d464d6db689a026bfd
+  - version: 7.0.0.0b3
+    projects:
+      - repo: openstack/zaqar
+        hash: 179a08d6043233c47938d7d47a0d8a5eafb291c1
 repository-settings:
   openstack/zaqar: {}
