--- a/deliverables/rocky/zaqar-ui.yaml
+++ b/deliverables/rocky/zaqar-ui.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/zaqar-ui
         hash: 83dd934ad547988fca5b5ddb9554dbe9fa98b68a
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/zaqar-ui
+        hash: 7fae67c0af2a6219a109be39253f6b658bc9594e
 repository-settings:
   openstack/zaqar-ui: {}
