--- a/deliverables/rocky/murano-agent.yaml
+++ b/deliverables/rocky/murano-agent.yaml
@@ -10,3 +10,10 @@ releases:
     projects:
       - repo: openstack/murano-agent
         hash: d8cd0ceee7746b9fe5468b239784b3509b7c47bc
+  - version: 3.5.1
+    projects:
+      - repo: openstack/murano-agent
+        hash: 08fda6ea42bf355bc087bf99883b588e80952d37
+branches:
+  - name: stable/rocky
+    location: 3.5.1
