--- a/deliverables/rocky/python-tackerclient.yaml
+++ b/deliverables/rocky/python-tackerclient.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/python-tackerclient
         hash: 9879a46f5859260843a2f4c07215b1bbab24722f
+  - version: 0.13.0
+    projects:
+      - repo: openstack/python-tackerclient
+        hash: c6f918cc51a65e87f4e7314012d58845aeb65e77
