Relase tricircle for Rocky
Change-Id: I25e8ebc9be1b20d564654e6f5f7b1c153f922935

--- a/deliverables/rocky/tricircle.yaml
+++ b/deliverables/rocky/tricircle.yaml
@@ -4,5 +4,13 @@ launchpad: tricircle
 release-model: cycle-with-intermediary
 team: tricircle
 type: service
+releases:
+  - version: 5.1.0
+    projects:
+      - repo: openstack/tricircle
+        hash: 361e5e7a7285e469410df03e8dd1edfdd0243891
+branches:
+  - name: stable/rocky
+    location: 5.1.0
 repository-settings:
   openstack/tricircle: {}
