--- a/deliverables/queens/openstack-ansible.yaml
+++ b/deliverables/queens/openstack-ansible.yaml
@@ -857,6 +857,10 @@ releases:
       - hash: a4fa7aee4366239560658c8f4b3846445fea6bd9
         repo: openstack/openstack-ansible
     version: 17.0.6
+  - projects:
+      - hash: 44c98893b48693d17231842e33336e6575bd4a31
+        repo: openstack/openstack-ansible
+    version: 17.0.7
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
